Fix issue with pokemon title span clipping

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -2,6 +2,7 @@
   font-family: $font-pokemon;
   font-size: 2.5em;
   color: red;
+  padding-right: 5px;
 }
 
 .tracker-title {
